@@ -1,3 +1,8 @@
+2004-04-23  Choe Hwanjin <krisna@kldp.org>
+	* src/handler.c src/ic.c src/ic.h src/server.c src/server.h:
+	  status window 콜백 함수를 구현함
+	* src/server.c: 한영 전환키로 오른쪽 Alt를 추가
+
 2004-04-19  Choe Hwanjin <krisna@kldp.org>
 	* src/server.c: charset 체크하면서 ko로 시작하지 않으면 워닝을
 	  출력하도록 함
